deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: game-deployment
  namespace: game-208
  labels:
    app: game-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: game-app
  template:
    metadata:
      labels:
        app: game-app
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - amd64
                - arm64
      containers:
      - name: nginx
        image:  public.ecr.aws/l6m2t8p7/docker-2048:latest
        ports:
        - containerPort: 80
        imagePullPolicy: IfNotPresent
      nodeSelector:
        kubernetes.io/os: linux
