service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-app-service
spec:
  selector:
    app: game-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
