ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game 208
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: service-2048
            port:
              number: 80
